[docker] split up dockerfile creation command
Signed-off-by: Dan Johansen <strit@manjaro.org>

--- a/.github/workflows/aarch64_base_stable_docker_build.yaml
+++ b/.github/workflows/aarch64_base_stable_docker_build.yaml
@@ -159,6 +159,8 @@ jobs:
           
           # Create Dockerfile
           echo "FROM scratch\nADD $BUILDDIR/$ARCH /\nCMD \[\"bash\"\]" > ./Dockerfile
+          echo "ADD $BUILDDIR/$ARCH" >> ./Dockerfile
+          echo 'CMD ["bash"]' >> ./Dockerfile
       -
         name: build-image
         run: |
