[docker] fix ADD in Dockerfile
Signed-off-by: Dan Johansen <strit@manjaro.org>

--- a/.github/workflows/aarch64_base_stable_docker_build.yaml
+++ b/.github/workflows/aarch64_base_stable_docker_build.yaml
@@ -159,7 +159,7 @@ jobs:
           
           # Create Dockerfile
           echo "FROM scratch" > ./Dockerfile
-          echo "ADD $BUILDDIR/$ARCH" >> ./Dockerfile
+          echo "ADD $BUILDDIR/$ARCH /" >> ./Dockerfile
           echo 'CMD ["bash"]' >> ./Dockerfile
       -
         name: build-image
