--- a/.github/workflows/arm_base_stable_docker_build.yaml
+++ b/.github/workflows/arm_base_stable_docker_build.yaml
@@ -1,8 +1,8 @@
-name: aarch64_base_unstable_docker_build
+name: aarch64_base_stable_docker_build
 on:
   workflow_dispatch:
   schedule:
-    - cron:  '30 1 * * *'
+    - cron:  '30 1 * * 1'
 
 jobs:
   build-container:
@@ -32,11 +32,7 @@ jobs:
             libgpgme-dev \
             libssl-dev \
             fakeroot \
-            dh-autoreconf \
-            qemu-utils \
-            qemu-efi-aarch64 \
-            qemu-system-arm \
-            qemu-user-static
+            dh-autoreconf
           sudo pip3 install meson
           sudo pip3 install ninja
           
@@ -122,7 +118,7 @@ jobs:
           # Set globals
           LIBDIR=/usr/share/manjaro-arm-tools/lib
           ARCH="aarch64"
-          DOCKER_IMAGE_NAME="manjaro-$ARCH-base"
+          DOCKER_IMAGE_NAME="manjaro-arm-base"
 
           source $LIBDIR/functions.sh
           
@@ -131,16 +127,8 @@ jobs:
           # cd to root_fs
           sudo mkdir -p $BUILDDIR/$ARCH
 
-          # Switch branch
-          BRANCH="unstable"
-          info "Switching branch to $BRANCH..."
-          sed -i s/"arm-stable"/"arm-$BRANCH"/g $LIBDIR/pacman.conf.$ARCH
-
           # Pacstrap the rootfs filesystem
           sudo $LIBDIR/pacstrap -G -c -C $LIBDIR/pacman.conf.$ARCH $BUILDDIR/$ARCH base-devel
-
-          # Enable cross architecture Chrooting
-          sudo cp /usr/bin/qemu-aarch64-static $BUILDDIR/$ARCH/usr/bin/
     
           # fix SSL in the rootfs
           sudo $NSPAWN $BUILDDIR/$ARCH update-ca-trust
@@ -149,15 +137,13 @@ jobs:
           sudo $NSPAWN $BUILDDIR/$ARCH pacman-key --init
           sudo $NSPAWN $BUILDDIR/$ARCH pacman-key --populate archlinuxarm manjaro manjaro-arm
           sudo $NSPAWN $BUILDDIR/$ARCH pacman-mirrors -f5
-          
           msg "Making Docker image..."
           # Create Dockerfile
           echo "FROM scratch" > $BUILDDIR/Dockerfile
           echo "COPY $ARCH/ /" >> $BUILDDIR/Dockerfile
           echo 'CMD ["bash"]' >> $BUILDDIR/Dockerfile
           
-          # Build and push new image
-          sudo docker build -t $DOCKER_IMAGE_NAME:dev $BUILDDIR/
+          sudo docker build -t $DOCKER_IMAGE_NAME:latest $BUILDDIR/
           sudo docker login -u=${{ secrets.DOCKER_USERNAME }} -p=${{ secrets.DOCKER_PASSWORD }}
-          sudo docker image tag $DOCKER_IMAGE_NAME:dev manjaroarm/$DOCKER_IMAGE_NAME:dev
-          sudo docker push manjaroarm/$DOCKER_IMAGE_NAME:dev
+          sudo docker image tag $DOCKER_IMAGE_NAME:latest manjaroarm/$DOCKER_IMAGE_NAME:latest
+          sudo docker push manjaroarm/$DOCKER_IMAGE_NAME:latest
