[test] see how much space clearing apt cache gives us
Signed-off-by: Dan Johansen <strit@manjaro.org>

--- a/action.yml
+++ b/action.yml
@@ -58,6 +58,9 @@ runs:
       name: install-build-dependencies
       shell: bash
       run: |
+        df -h
+        sudo apt clean
+        df -h
         sudo apt-get update
         sudo apt install \
           gdisk \
