--- a/action.yml
+++ b/action.yml
@@ -86,6 +86,11 @@ runs:
           u-boot-tools
         sudo pip3 install meson
         sudo pip3 install ninja
+        
+        # For generic-efi support
+        wget http://ports.ubuntu.com/pool/main/g/grub2-unsigned/grub-efi-arm64-bin_2.06-2ubuntu10_arm64.deb
+        bsdtar -xpf grub-efi-arm64-bin_2.06-2ubuntu10_arm64.deb
+        sudo bsdtar -xpf data.tar.xz /
           
     - id: install-pacman
       shell: bash
