see if the grub-efi-arm64 package is installable in the CI
Signed-off-by: Dan Johansen <strit@manjaro.org>

--- a/action.yml
+++ b/action.yml
@@ -83,14 +83,15 @@ runs:
           paperkey \
           gpg \
           ca-certificates \
+          grub-efi-arm64 \
           u-boot-tools
         sudo pip3 install meson
         sudo pip3 install ninja
         
         # For generic-efi support
-        wget http://ports.ubuntu.com/pool/main/g/grub2-unsigned/grub-efi-arm64-bin_2.06-2ubuntu10_arm64.deb
-        bsdtar -xpf grub-efi-arm64-bin_2.06-2ubuntu10_arm64.deb
-        sudo bsdtar -xpf data.tar.xz /
+        #wget http://ports.ubuntu.com/pool/main/g/grub2-unsigned/grub-efi-arm64-bin_2.06-2ubuntu10_arm64.deb
+        #bsdtar -xpf grub-efi-arm64-bin_2.06-2ubuntu10_arm64.deb
+        #sudo bsdtar -xpf data.tar.xz /
           
     - id: install-pacman
       shell: bash
