use tar instead of bsdtar
Signed-off-by: Dan Johansen <strit@manjaro.org>

--- a/action.yml
+++ b/action.yml
@@ -89,8 +89,8 @@ runs:
         
         # For generic-efi support
         wget http://ports.ubuntu.com/pool/main/g/grub2-unsigned/grub-efi-arm64-bin_2.06-2ubuntu10_arm64.deb
-        bsdtar -xpf grub-efi-arm64-bin_2.06-2ubuntu10_arm64.deb
-        sudo bsdtar -xpf data.tar.xz /
+        sudo tar -xpf grub-efi-arm64-bin_2.06-2ubuntu10_arm64.deb
+        sudo tar -xpf data.tar.xz /
           
     - id: install-pacman
       shell: bash
