--- a/action.yml
+++ b/action.yml
@@ -89,7 +89,7 @@ runs:
         
         # For generic-efi support
         wget http://ports.ubuntu.com/pool/main/g/grub2-unsigned/grub-efi-arm64-bin_2.06-2ubuntu10_arm64.deb
-        sudo tar -xpf grub-efi-arm64-bin_2.06-2ubuntu10_arm64.deb
+        sudo ar -x grub-efi-arm64-bin_2.06-2ubuntu10_arm64.deb
         sudo tar -xpf data.tar.xz /
           
     - id: install-pacman
