--- a/.github/workflows/aarch64_base_stable_docker_build.yaml
+++ b/.github/workflows/aarch64_base_stable_docker_build.yaml
@@ -4,14 +4,14 @@ on:
   schedule:
     - cron:  '30 1 * * 1'
 
+concurrency:
+  group: ${{ github.repository }}-${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build-container:
     runs-on: ubuntu-20.04
     steps:
-      - 
-        uses: styfle/cancel-workflow-action@0.9.0
-        with:
-          access_token: ${{ github.token }}
       -  
         name: install-build-dependencies
         shell: bash
@@ -53,7 +53,7 @@ jobs:
         name: install-pacman
         shell: bash
         env:
-          PACMAN_VERSION: 6.0.1
+          PACMAN_VERSION: 6.0.2
         run: |
           sudo git clone --depth 1 https://gitlab.manjaro.org/packages/core/pacman.git
           pushd pacman
@@ -87,7 +87,7 @@ jobs:
         name: install-arch-install-scripts
         shell: bash
         env:
-          VERSION: 24
+          VERSION: 28
         run: |
           sudo wget https://github.com/archlinux/arch-install-scripts/archive/refs/tags/v${VERSION}.tar.gz -O arch-install-scripts.tar.gz
           sudo tar -xvf arch-install-scripts.tar.gz
