--- a/action.yml
+++ b/action.yml
@@ -94,14 +94,14 @@ runs:
     - id: install-pacman
       shell: bash
       env:
-        PACMAN_VERSION: 6.0.2
+        PACMAN_VERSION: 6.1.0
       run: |
         sudo git clone --depth 1 https://gitlab.manjaro.org/packages/core/pacman.git
         pushd pacman
           sudo wget https://sources.archlinux.org/other/pacman/pacman-${PACMAN_VERSION}.tar.xz
           sudo tar -xvf pacman-${PACMAN_VERSION}.tar.xz
           pushd pacman-${PACMAN_VERSION}
-            sudo patch -p1 -i ../pacman-sync-first-option.patch
+          #  sudo patch -p1 -i ../pacman-sync-first-option.patch Removed
             sudo meson --prefix=/usr \
                       --buildtype=plain \
                       -Ddoc=disabled \
