--- a/.github/workflows/aarch64_base_unstable_docker_build.yaml
+++ b/.github/workflows/aarch64_base_unstable_docker_build.yaml
@@ -144,11 +144,16 @@ jobs:
           # fix SSL in the rootfs
           sudo $NSPAWN $BUILDDIR/$ARCH update-ca-trust
     
+          
+          #Only for testing purpose.
+          info "Sed branch"
+          sudo $NSPAWN $BUILDDIR/$ARCH sed -i s/"stable"/"arm-$BRANCH"/g /etc/pacman-mirrors.conf 
+          info "End of Sed branch"
+
           info "Setting up keyrings..."
-          sudo $NSPAWN $BUILDDIR/$ARCH sed -i s/"stable"/"arm-$BRANCH"/g /etc/pacman-mirrors.conf #Only for testing purpose.
           sudo $NSPAWN $BUILDDIR/$ARCH pacman-key --init
           sudo $NSPAWN $BUILDDIR/$ARCH pacman-key --populate archlinuxarm manjaro manjaro-arm
-                    sudo $NSPAWN $BUILDDIR/$ARCH pacman-mirrors -f5
+          sudo $NSPAWN $BUILDDIR/$ARCH pacman-mirrors -f5
           
           msg "Making Docker image..."
           # Create Dockerfile
